--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -5,19 +5,19 @@
 }
 
 #fb {
-    background:#3B5998 url('assets/images/facebook.svg') no-repeat 14px 6px;
+    background:#3B5998 no-repeat 14px 6px;
     background-size: 47px;
     color:#fff;
 }
 
 #google {
     border: 1px solid #95989A;
-    background: #fff  url('assets/images/google.svg') no-repeat 25px;
+    background: #fff no-repeat 25px;
     background-size: 25px;
 }
 
 #email {
-    background: #ECECEC  url('assets/images/email.svg') no-repeat 25px;
+    background: #ECECEC no-repeat 25px;
     background-size: 25px;
 }
 
