--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -4,9 +4,10 @@
   <h2>Join now</h2>
 
   <span class="error" *ngIf="error" [@fallIn]='state'>{{ error }}</span>
-    
+
   <form #formData='ngForm' (ngSubmit)="onSubmit(formData)">
 
+    <input type="text" placeholder="Name" (ngModel)="name" name="name" class="txt" required>
     <input type="text" placeholder="Email address.." (ngModel)="email" name="email" class="txt" required>
     <input type="password" placeholder="Password" (ngModel)="password" name="password" class="txt" required>
 
