--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -7,7 +7,7 @@
 
   <form #formData='ngForm' (ngSubmit)="onSubmit(formData)">
 
-    <input type="text" placeholder="Name" (ngModel)="name" name="name" class="txt" required>
+    <input type="text" placeholder="Code" (ngModel)="code" name="code" class="txt" required>
     <input type="text" placeholder="Email address.." (ngModel)="email" name="email" class="txt" required>
     <input type="password" placeholder="Password" (ngModel)="password" name="password" class="txt" required>
 
