--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -8,7 +8,7 @@
   <form #formData='ngForm' (ngSubmit)="onSubmit(formData)">
 
     <input type="text" placeholder="Code" (ngModel)="code" name="code" class="txt" required>
-    <input type="text" placeholder="Email address.." (ngModel)="email" name="email" class="txt" required>
+    <input type="text" placeholder="Email address" (ngModel)="email" name="email" class="txt" required>
     <input type="password" placeholder="Password" (ngModel)="password" name="password" class="txt form-control text-line" required>
 
     <button type="submit" [disabled]="!formData.valid" class="basic-btn">Create my account</button>
