--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,7 +8,7 @@
   <button (click)="loginGoogle()" id="google">Login With Google</button>
 -->
 
-  <button routerLink="/login-email" id="email">Email</button>
+  <button routerLink="/login-email" id="email">Enter</button>
 
-  <a routerLink="/signup" routerLinkActive="active" class="alc">No account? <strong>Create one here</strong></a>
+  <a routerLink="/signup" routerLinkActive="active" class="alc">New? <strong>Register here</strong></a>
 </div>
