--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -12,7 +12,8 @@
     <input type="text" placeholder="Email address" (ngModel)="email" name="email" class="txt" required>
     <input type="password" placeholder="Password" (ngModel)="password" name="password" class="txt form-control text-line" required>
 
-    <input type="checkbox" [checked]="agreeConditions" (change)="agreeConditions = !agreeConditions" /> Agree with conditions
+    <input type="checkbox" [checked]="agreeConditions" (change)="agreeConditions = !agreeConditions" />
+    Agree with <a routerLink="../terms.html"> conditions </a>
 
 
     <button type="submit" class="basic-btn">Create my account</button>
