--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background:#E2E4E6;
+    background:#333;
     padding-top:4em;
 }
 
 .form-container {
-    background:white;
+    background: #ccc;
     padding:3.5em;
     width:500px;
     position:fixed;
@@ -44,11 +44,15 @@ h2 {
 }
 
 .error {
-    background:#f1f0ef;
-    padding:1em;
-    width:100%;
-    display:block;
-    margin-bottom:20px;
+    padding: 0.2em;
+    padding-left: 15px;
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+    color: red;
+    border: 2px solid red;
+    font-weight: bold;
+    background: #FCFF95;
 }
 
 #goback {
