--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -13,7 +13,7 @@
     <input type="password" placeholder="Password" (ngModel)="password" name="password" class="txt form-control text-line" required>
 
     <input type="checkbox" [checked]="agreeConditions" (change)="agreeConditions = !agreeConditions" />
-    Agree with <a routerLink="../terms.html"> conditions </a>
+    Agree with <a routerLink="/terms"> terms </a>
 
 
     <button type="submit" class="basic-btn">Create my account</button>
