Changing link names

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,7 +1,11 @@
 <div class="form-container">
-  <a routerLink="/login" id="goback">Go back</a>
 
-  <h2>Join now</h2>
+  <a routerLink="/login-email" id="goback">Login</a>
+
+  <br />
+  <br />
+
+  <h1>Register:</h1>
 
   <span class="error" *ngIf="error" [@fallIn]='state'>{{ error }}</span>
 
