Starting with styling

--- a/src/app/email/email.component.html
+++ b/src/app/email/email.component.html
@@ -1,6 +1,7 @@
 <div class="form-container">
     <a routerLink="/signup" id="goback">Go back</a>
-    <h2>Custom Login</h2>
+
+    <img src="../assets/images/login_text.jpg" />
 
     <span class="error" *ngIf="error" [@fallIn]='state'>{{ error }}</span>
 
