--- a/src/app/members/members.component.css
+++ b/src/app/members/members.component.css
@@ -1,3 +1,8 @@
+body {
+    background-image: url('../../assets/images/background.jpg') !important;
+    font-family: 'Helvetica', 'Arial', sans-serif;
+}
+
 #toolbar {
     padding:0;
     width:70%;
