--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -1,7 +1,11 @@
 .red {
-  border: 2px solid red;
+    border: 2px solid red;
 }
 
 .hidden{
-  display: none;
+    display: none;
+}
+
+form {
+    margin-top: 4rem;
 }
