login image and styling

--- a/src/app/email/email.component.html
+++ b/src/app/email/email.component.html
@@ -1,7 +1,7 @@
 <div class="form-container">
     <a routerLink="/signup" id="goback">Go back</a>
 
-    <img src="../assets/images/login_text.jpg" />
+    <img src="../assets/images/login_text.png" />
 
     <span class="error" *ngIf="error" [@fallIn]='state'>{{ error }}</span>
 
@@ -11,6 +11,6 @@
       <input type="password" placeholder="Password" (ngModel)="password" name="password" class="txt" required>
 
       <button type="submit" [disabled]="!formData.valid" class="basic-btn">Log in</button>
-      <a routerLink="/signup" class="alc">Register here</a>
+      <a routerLink="/signup" class="alc button-reg">Register here</a>
   </form>
 </div>
