--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,6 +1,6 @@
 <div class="form-container" id="toolbar">
     <header [@fallIn]="state">
-      <button (click)="logout()" class="basic-btn">Logout</button>
+      <button (click)="logout()" class="basic-btn">Logout!</button>
     </header>
     <div id="page" [@moveInLeft]="state">
 
@@ -36,7 +36,7 @@
           <div id="tickets" class="tab-pane fade">
             <h3>Menu 2</h3>
             <div>
-              <iframe src="http://www.w3schools.com">
+              <iframe src="http://www.google.com">
                   <p>Your browser does not support iframes.</p>
               </iframe>
             </div>
