--- a/src/app/terms/terms.component.html
+++ b/src/app/terms/terms.component.html
@@ -1,7 +1,16 @@
 <div class="form-container">
 
   <h1> Hello I'm the terms! </h1>
-  <h3>
+  <div>
+    Bla bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+     bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+      bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+
+       bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+
+
+   bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+    bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
     Bla bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
      bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
       bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
@@ -12,7 +21,47 @@
    bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
     bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
 
-  </h3>
+    Bla bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+     bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+      bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+
+       bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+
+
+   bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+    bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+
+    Bla bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+     bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+      bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+
+       bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+
+
+   bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+    bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+
+    Bla bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+     bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+      bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+
+       bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+
+
+   bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+    bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+
+    Bla bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+     bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+      bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+
+       bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+
+
+   bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+    bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
+
+  </div>
 
 
   <a routerLink="/signup" routerLinkActive="active" class="alc"><strong>Ok, got it</strong></a>
