--- a/src/app/members/members.component.css
+++ b/src/app/members/members.component.css
@@ -1,7 +1,8 @@
-body {
-    background-image: url('../../assets/images/background.jpg') !important;
+.backgroundClass {
+    background-image: url('../../assets/images/login_text.png') !important;
     font-family: 'Helvetica', 'Arial', sans-serif;
 }
+
 
 #toolbar {
     padding:0;
@@ -45,6 +46,14 @@ h2 {
     border-bottom: 0.2rem solid white;
 }
 
+.form-container {
+    background: transparent;
+    padding:3.5em;
+    width:500px;
+    position:fixed;
+    left:50%;
+    margin-left:-250px;
+}
 
 
 @media (max-width: 600px) {
