--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 .form-container {
-    background: #F2F2F0;
+    background: #f5f5f3;
     padding:3.5em;
     width:500px;
     position:fixed;
