--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -11,17 +11,17 @@
         <div class="container">
           <ul class="nav nav-tabs">
             <li class="active">
-                <a data-toggle="tab" href="#home">
+                <a data-toggle="tab" href="#info">
                     <img class="imagemenu" src="../assets/images/info_label.png" />
                 </a>
             </li>
             <li>
-                <a data-toggle="tab" href="#menu1">
+                <a data-toggle="tab" href="#tickets">
                     <img class="imagemenu" src="../assets/images/tickets_label.png" />
                 </a>
             </li>
             <li>
-                <a data-toggle="tab" href="#tickets">
+                <a data-toggle="tab" href="#contact">
                     <img class="imagemenu" src="../assets/images/contact_label.png" />
                 </a>
             </li>
@@ -34,8 +34,8 @@
           </ul>
 
           <div class="tab-content">
-            <div id="home" class="tab-pane fade in active">
-              <h3>HOME</h3>
+            <div id="info" class="tab-pane fade in active">
+              <h3>INFO</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -50,24 +50,29 @@
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
             </div>
-            <div id="menu1" class="tab-pane fade">
-              <h3>Menu 1</h3>
-              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            </div>
             <div id="tickets" class="tab-pane fade">
-              <h3>Menu 2</h3>
+              <h3>Tickets</h3>
               <div>
-                <iframe src="http://www.google.com">
+                <iframe src="http://ticketfrog.ch/de/p/party/house-techno/silvesterzauber-1510026170968001220.html">
                     <p>Your browser does not support iframes.</p>
                 </iframe>
               </div>
             </div>
-            <!--
-            <div id="menu3" class="tab-pane fade">
-              <h3>Menu 3</h3>
+            <div id="contact" class="tab-pane fade">
+              <h3>Contact</h3>
+
+              <!-- www.123contactform.com script begins here -->
+              <iframe allowTransparency="true" style="min-height:450px; height:inherit; overflow:auto;" width="100%" id="contactform123" name="contactform123" marginwidth="0" marginheight="0" frameborder="0" src="http://www.123contactform.com/my-contact-form-3132274.html">
+              <p>Your browser does not support iframes. The contact form cannot be displayed. Please use another contact method (phone, fax etc)</p>
+              </iframe>
+
+
+
+            </div>
+            <div id="hall" class="tab-pane fade">
+              <h3>Hall of fame</h3>
               <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
             </div>
-            -->
           </div>
         </div>
 
