--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,10 +1,16 @@
 <div class="members-wrapper">
 
-  <header [@fallIn]="state">
-    <button (click)="logout()" class="basic-btn">Logout</button>
-  </header>
+
 
   <div class="form-container" id="toolbar">
+
+
+      <img class="imagelogo" src="../assets/images/logo.svg" />
+
+      <header [@fallIn]="state">
+          <button (click)="logout()" class="basic-btn">Logout</button>
+      </header>
+
 
       <div id="page" [@moveInLeft]="state">
 
