--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,7 +1,6 @@
 <div class="members-wrapper">
 
 
-
   <div class="form-container" id="toolbar">
 
 
@@ -41,7 +40,7 @@
           <div class="tab-content">
             <div id="info" class="tab-pane fade in active">
               <h3>INFO</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ka ak  kaa a a asd asd asd ka ak  kaa a a asd asd asdka ak  kaa a a asd asd asdka ak  kaa a a asd asd asdka ak  kaa a a asd asd asd</p>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
