--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -1,3 +1,15 @@
+.signup-wrapper {
+    background-image: url('../../assets/images/background_register.jpg');
+    background-repeat:no-repeat;
+    /*background-size:contain;*/
+    background-position:center;
+
+    height: 56rem;
+    width: 100%;
+    position: absolute;
+    overflow-y: scroll;
+}
+
 .red {
     border: 2px solid red;
 }
