--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -87,14 +87,16 @@
             <div id="tickets" class="tab-pane fade">
               <h3>Tickets</h3>
               <div>
-                  <iframe width="100%" height="1200" src="https://embed.ticketfrog.ch/de/p/party/house-techno/silvesterzauber-1510026170968001220.html?color=95C11F&infobox=1&description=1&location=1&organisator=1&sponsors=1"></iframe>
+                  <iframe class="iframeTickets" width="650" height="1600" src="https://embed.ticketfrog.ch/de/p/party/house-techno/silvesterzauber-1510026170968001220.html?color=95C11F&infobox=1&description=1&location=1&organisator=1&sponsors=1">
+
+                  </iframe>
               </div>
             </div>
             <div id="contact" class="tab-pane fade">
               <h3>Contact</h3>
 
               <!-- www.123contactform.com script begins here -->
-              <iframe allowTransparency="true" style="min-height:450px; height:inherit; overflow:auto;" width="100%" id="contactform123" name="contactform123" marginwidth="0" marginheight="0" frameborder="0" src="http://www.123contactform.com/my-contact-form-3132274.html">
+              <iframe allowTransparency="true" style="min-height:450px; height:inherit; overflow:auto;" width="100%" id="contactform123" name="contactform123" marginwidth="0" marginheight="0" frameborder="0" src="https://www.123contactform.com/my-contact-form-3132274.html">
               <p>Your browser does not support iframes. The contact form cannot be displayed. Please use another contact method (phone, fax etc)</p>
               </iframe>
 
