--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -2,6 +2,7 @@
     <div class="form-container">
 
       <a routerLink="/login-email" id="goback">Login</a>
+      <a href="mailto:rdiazroman@gmail.com" target="_top" id="goback" class="contactUs" >Contact us</a>
 
       <br />
       <br />
